--- a/mybeats.html
+++ b/mybeats.html
@@ -7,7 +7,8 @@
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Playfair+Display:wght@400;600&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 <style>
 :root {
@@ -15,6 +16,11 @@
     --primary-red: #9E4244;
     --text-dark: #2c2c2c;
     --border-line: #000;
+    --muted-text: #555;
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 * {
@@ -23,15 +29,12 @@
     box-sizing: border-box;
 }
 
-html {
-    scroll-behavior: smooth;
-}
-
 body {
     font-family: 'Lato', sans-serif;
     background-color: var(--bg-cream);
     color: var(--text-dark);
     border-top: 20px solid var(--primary-red);
+    min-height: 100vh;
 }
 
 /* HEADER */
@@ -54,17 +57,13 @@ nav {
 nav a {
     text-decoration: none;
     font-family: 'Playfair Display', serif;
-    font-size: 1.1rem;
+    font-size: 1.2rem;
     color: var(--text-dark);
-}
-
-nav a:hover {
-    color: var(--primary-red);
 }
 
 /* SECTION */
 .section {
-    padding: 9rem 8% 5rem;
+    padding: 8rem 10% 6rem;
 }
 
 .section-content {
@@ -72,106 +71,102 @@ nav a:hover {
     margin: auto;
 }
 
+/* TITLE */
 h2 {
     font-family: 'Playfair Display', serif;
     font-size: 3rem;
     text-align: center;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
     color: var(--primary-red);
 }
 
-/* IMAGE COLLAGE */
-.image-collage {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
+.subtitle {
+    text-align: center;
+    font-style: italic;
+    color: var(--muted-text);
     margin-bottom: 4rem;
 }
 
-.square-img {
-    width: 100%;
+/* GRID */
+.beats-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 3rem;
+}
+
+.beat-card {
+    text-align: center;
+}
+
+/* IMAGE */
+.image-placeholder {
     aspect-ratio: 1/1;
     background-color: #eee;
     border: 2px solid var(--border-line);
+    margin-bottom: 1rem;
 }
 
-/* ARTIST BLOCK */
-.artist-block {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    gap: 3rem;
-    padding: 3rem 0;
-    border-bottom: 2px solid var(--border-line);
-}
-
-.artist-title {
+/* TEXT */
+.artist-name {
     font-family: 'Playfair Display', serif;
-    font-size: 1.8rem;
-    color: var(--primary-red);
-    margin-bottom: 0.5rem;
+    font-size: 1.4rem;
+    margin-bottom: 0.3rem;
 }
 
 .album-name {
-    font-style: italic;
-    color: #666;
+    font-size: 0.75rem;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    color: var(--muted-text);
+    margin-bottom: 0.7rem;
 }
 
-/* SONG LIST */
-.song-list {
-    list-style: none;
+.review-snippet {
+    font-size: 0.9rem;
+    color: var(--muted-text);
+    line-height: 1.6;
 }
 
-.song-item {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    margin-bottom: 1.5rem;
-    padding-bottom: 0.5rem;
-    border-bottom: 1px solid #ddd;
+/* BOTTOM DIVIDER */
+.bottom-divider {
+    border-top: 2px solid var(--border-line);
+    margin-top: 5rem;
 }
 
-.song-thumb {
-    width: 55px;
-    aspect-ratio: 1/1;
-    background-color: #eee;
-    border: 2px solid var(--border-line);
-    flex-shrink: 0;
-}
-
-.song-item a {
-    text-decoration: none;
-    font-family: 'Playfair Display', serif;
-    font-size: 1.3rem;
-    color: var(--text-dark);
-    transition: 0.3s ease;
-}
-
-.song-item a:hover {
-    color: var(--primary-red);
-    padding-left: 5px;
-}
-
-/* BACK TO TOP */
-.back-to-top {
+/* FOOTER */
+footer {
+    background-color: #DCDCD5;
+    padding: 2rem 0;
     text-align: center;
     margin-top: 4rem;
 }
 
-.back-to-top a {
-    text-decoration: none;
-    font-family: 'Playfair Display', serif;
-    color: var(--primary-red);
-    font-weight: 600;
+.social-links {
+    display: flex;
+    justify-content: center;
+    gap: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+.social-links a {
+    color: var(--text-dark);
+    font-size: 1.4rem;
+}
+
+footer p {
+    font-size: 0.9rem;
 }
 
 /* RESPONSIVE */
-@media(max-width:768px){
-    .artist-block {
-        grid-template-columns: 1fr;
-    }
-
-    .image-collage {
+@media(max-width: 900px){
+    .beats-grid {
         grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media(max-width: 600px){
+    .beats-grid {
+        grid-template-columns: 1fr;
     }
 }
 </style>
@@ -192,92 +187,92 @@ h2 {
 <div class="section-content">
 
 <h2>My Beats</h2>
+<p class="subtitle">My personal favorites</p>
 
-<!-- Simple Image Grid -->
-<div class="image-collage">
-    <div class="square-img"></div>
-    <div class="square-img"></div>
-    <div class="square-img"></div>
-    <div class="square-img"></div>
-    <div class="square-img"></div>
-    <div class="square-img"></div>
-</div>
+<div class="beats-grid">
 
-<!-- Tame Impala -->
-<div class="artist-block">
-    <div>
-        <div class="artist-title">Tame Impala</div>
-        <div class="album-name">Album: Currents</div>
+    <div class="beat-card">
+        <a href="lyrics-page1.html">
+            <div class="image-placeholder"></div>
+        </a>
+        <div class="artist-name">Tame Impala</div>
+        <div class="album-name">Currents</div>
+        <div class="review-snippet">
+            A dreamy, late-night anthem wrapped in nostalgic synth textures.
+        </div>
     </div>
 
-    <ul class="song-list">
-        <li class="song-item">
-            <div class="song-thumb"></div>
-            <a href="lyrics-less-i-know.html">The Less I Know The Better</a>
-        </li>
-        <li class="song-item">
-            <div class="song-thumb"></div>
-            <a href="lyrics-eventually.html">Eventually</a>
-        </li>
-        <li class="song-item">
-            <div class="song-thumb"></div>
-            <a href="lyrics-new-person.html">New Person, Same Old Mistakes</a>
-        </li>
-    </ul>
-</div>
-
-<!-- Mitski -->
-<div class="artist-block">
-    <div>
-        <div class="artist-title">Mitski</div>
-        <div class="album-name">Album: Be the Cowboy</div>
+    <div class="beat-card">
+        <a href="lyrics-page2.html">
+            <div class="image-placeholder"></div>
+        </a>
+        <div class="artist-name">Mitski</div>
+        <div class="album-name">Be The Cowboy</div>
+        <div class="review-snippet">
+            Sharp lyrics layered over minimal production and emotional restraint.
+        </div>
     </div>
 
-    <ul class="song-list">
-        <li class="song-item">
-            <div class="song-thumb"></div>
-            <a href="lyrics-nobody.html">Nobody</a>
-        </li>
-        <li class="song-item">
-            <div class="song-thumb"></div>
-            <a href="lyrics-me-and-my-husband.html">Me and My Husband</a>
-        </li>
-        <li class="song-item">
-            <div class="song-thumb"></div>
-            <a href="lyrics-why-didnt-you-stop-me.html">Why Didn't You Stop Me</a>
-        </li>
-    </ul>
-</div>
-
-<!-- Arctic Monkeys -->
-<div class="artist-block">
-    <div>
-        <div class="artist-title">Arctic Monkeys</div>
-        <div class="album-name">Album: AM</div>
+    <div class="beat-card">
+        <a href="lyrics-page3.html">
+            <div class="image-placeholder"></div>
+        </a>
+        <div class="artist-name">Arctic Monkeys</div>
+        <div class="album-name">AM</div>
+        <div class="review-snippet">
+            Soft melodies that feel both intimate and expansive.
+        </div>
     </div>
 
-    <ul class="song-list">
-        <li class="song-item">
-            <div class="song-thumb"></div>
-            <a href="lyrics-knee-socks.html">Knee Socks</a>
-        </li>
-        <li class="song-item">
-            <div class="song-thumb"></div>
-            <a href="lyrics-snap-out-of-it.html">Snap Out of It</a>
-        </li>
-        <li class="song-item">
-            <div class="song-thumb"></div>
-            <a href="lyrics-i-want-it-all.html">I Want It All</a>
-        </li>
-    </ul>
+    <div class="beat-card">
+        <a href="lyrics-page4.html">
+            <div class="image-placeholder"></div>
+        </a>
+        <div class="artist-name">My Chemical Romance</div>
+        <div class="album-name">The Black Parade</div>
+        <div class="review-snippet">
+            A balance of vulnerability and confident storytelling.
+        </div>
+    </div>
+
+    <div class="beat-card">
+        <a href="lyrics-page5.html">
+            <div class="image-placeholder"></div>
+        </a>
+        <div class="artist-name">Melanie Martinez</div>
+        <div class="album-name">Portals</div>
+        <div class="review-snippet">
+            Clean production elevated by emotionally raw vocals.
+        </div>
+    </div>
+
+    <div class="beat-card">
+        <a href="lyrics-page6.html">
+            <div class="image-placeholder"></div>
+        </a>
+        <div class="artist-name">Melanie Martinez</div>
+        <div class="album-name">Cry Baby</div>
+        <div class="review-snippet">
+            Subtle rhythms and layered ambience for reflective listening.
+        </div>
+    </div>
+
 </div>
 
-<div class="back-to-top">
-    <a href="#top">↑ Back to Top</a>
-</div>
+<div class="bottom-divider"></div>
 
 </div>
 </section>
+
+<footer>
+    <div class="social-links">
+        <a href="https://web.facebook.com/cycy.1123"><i class="fa-brands fa-facebook-f"></i></a>
+        <a href="https://github.com/libutoncyrilmae-a11y"><i class="fa-brands fa-github"></i></a>
+        <a href="https://www.instagram.com/cy.cyreal/"><i class="fa-brands fa-instagram"></i></a>
+        <a href="mailto:123cyrilmae@gmail.com"><i class="fa-regular fa-envelope"></i></a>
+    </div>
+    <p>&copy; Cyril Libuton</p>
+</footer>
 
 </body>
 </html>
