--- a/mybeats.html
+++ b/mybeats.html
@@ -37,7 +37,6 @@
             min-height: 100vh;
         }
 
-        /* HEADER */
         header {
             position: fixed;
             top: 0;
@@ -61,7 +60,6 @@
             color: var(--text-dark);
         }
 
-        /* SECTION */
         .section {
             padding: 8rem 10% 6rem;
         }
@@ -71,7 +69,6 @@
             margin: auto;
         }
 
-        /* TITLE */
         h2 {
             font-family: 'Playfair Display', serif;
             font-size: 3rem;
@@ -84,17 +81,24 @@
             text-align: center;
             font-style: italic;
             color: var(--muted-text);
-            margin-bottom: 4rem;
+            margin-bottom: 1rem;
         }
 
-        /* GRID */
+        .divider {
+            width: 100%;
+            height: 3px;
+            background-color: black;
+            margin: 2rem auto;
+            border-radius: 2px;
+        }
+
         .beats-grid {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
             gap: 3rem;
+            margin-bottom: 3rem;
         }
 
-        /* CLICKABLE CARD */
         .beat-card {
             display: block;
             background: white;
@@ -107,13 +111,11 @@
             transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
 
-        /* Hover Effect */
         .beat-card:hover {
             transform: translateY(-8px);
             box-shadow: 0 15px 30px rgba(0,0,0,0.1);
         }
 
-        /* IMAGE */
         .album-image {
             width: 100%;
             aspect-ratio: 1/1;
@@ -123,7 +125,6 @@
             display: block;
         }
 
-        /* TEXT */
         .artist-name {
             font-family: 'Playfair Display', serif;
             font-size: 1.4rem;
@@ -144,7 +145,6 @@
             line-height: 1.6;
         }
 
-        /* FOOTER */
         footer {
             background-color: #DCDCD5;
             padding: 2rem 0;
@@ -168,7 +168,6 @@
             font-size: 0.9rem;
         }
 
-        /* RESPONSIVE */
         @media(max-width: 900px){
             .beats-grid {
                 grid-template-columns: repeat(2, 1fr);
@@ -184,7 +183,6 @@
 </head>
 
 <body>
-
     <header>
         <nav>
             <a href="index.html">Home</a>
@@ -198,62 +196,53 @@
         <div class="section-content">
             <h2>My Beats</h2>
             <p class="subtitle">My personal favorites</p>
+            <div class="divider"></div>
 
             <div class="beats-grid">
                 <a href="https://open.spotify.com/album/79dL7FLiJFOO0EoehUHQBv" class="beat-card">
                     <img src="images/currents.png" class="album-image">
                     <div class="artist-name">Tame Impala</div>
                     <div class="album-name">Currents</div>
-                    <div class="review-snippet">
-                        It feels like being swept into a colorful wave of emotion that’s overwhelming yet strangely empowering.
-                    </div>
+                    <div class="review-snippet">It feels like being swept into a colorful wave of emotion that’s overwhelming yet strangely empowering.</div>
                 </a>
 
                 <a href="https://open.spotify.com/album/42cH7mrkfljkqkxA2Ip9Xq" class="beat-card">
                     <img src="images/bethecowboy.jpg" class="album-image">
                     <div class="artist-name">Mitski</div>
                     <div class="album-name">Be The Cowboy</div>
-                    <div class="review-snippet">
-                        Composed and dramatic, but you can feel the vulnerability underneath.
-                    </div>
+                    <div class="review-snippet">Composed and dramatic, but you can feel the vulnerability underneath.</div>
                 </a>
 
                 <a href="https://open.spotify.com/album/78bpIziExqiI9qztvNFlQu" class="beat-card">
                     <img src="images/am.png" class="album-image">
                     <div class="artist-name">Arctic Monkeys</div>
                     <div class="album-name">AM</div>
-                    <div class="review-snippet">
-                        Simple and bold, with a cool, late-night confidence.
-                    </div>
+                    <div class="review-snippet">Simple and bold, with a cool, late-night confidence.</div>
                 </a>
 
                 <a href="https://open.spotify.com/album/31qVWUdRrlb8thMvts0yYL" class="beat-card">
                     <img src="images/theslowrush.png" class="album-image">
                     <div class="artist-name">Tame Impala</div>
                     <div class="album-name">The Slow Rush</div>
-                    <div class="review-snippet">
-                        It captures the quiet, beautiful loneliness of time slowly slipping away.
-                    </div>
+                    <div class="review-snippet">It captures the quiet, beautiful loneliness of time slowly slipping away.</div>
                 </a>
 
                 <a href="https://open.spotify.com/album/6lbrHERXve89hrxuCpsJOg" class="beat-card">
                     <img src="images/portals.png" class="album-image">
                     <div class="artist-name">Melanie Martinez</div>
                     <div class="album-name">Portals</div>
-                    <div class="review-snippet">
-                        A strange, magical rebirth that feels freeing and chaotic.
-                    </div>
+                    <div class="review-snippet">A strange, magical rebirth that feels freeing and chaotic.</div>
                 </a>
 
                 <a href="https://open.spotify.com/playlist/6J9e5CSe67b2uuhlmY539p" class="beat-card">
                     <img src="images/crybaby.png" class="album-image">
                     <div class="artist-name">Melanie Martinez</div>
                     <div class="album-name">Cry Baby</div>
-                    <div class="review-snippet">
-                        Soft and pastel on the surface, but deeply honest about pain underneath.
-                    </div>
+                    <div class="review-snippet">Soft and pastel on the surface, but deeply honest about pain underneath.</div>
                 </a>
             </div>
+
+            <div class="divider"></div>
         </div>
     </section>
 
@@ -266,6 +255,5 @@
         </div>
         <p>&copy; Cyril Libuton</p>
     </footer>
-
 </body>
 </html>
