--- a/myfilm.html
+++ b/myfilm.html
@@ -1,94 +1,319 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="top">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>My Film Movies</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Personal Movie Favorites</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Playfair+Display:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Playfair+Display:wght@400;600&display=swap" rel="stylesheet">
 
-<style>
-:root {
-    --bg-cream: #FDFCF5;
-    --primary-red: #9E4244;
-    --text-dark: #2c2c2c;
-    --border-line: #000;
-}
-body {
-    font-family: 'Lato', sans-serif;
-    background-color: var(--bg-cream);
-    color: var(--text-dark);
-    border-top: 20px solid var(--primary-red);
-    margin:0;
-}
-header {
-    padding: 1.5rem 5%;
-    border-bottom: 2px solid var(--border-line);
-    text-align:center;
-}
-nav a {
-    margin: 0 2rem;
-    text-decoration:none;
-    font-family:'Playfair Display', serif;
-    color:var(--text-dark);
-}
-nav a:hover { color: var(--primary-red); }
-.section {
-    padding: 5rem 10%;
-    border-top:2px solid var(--border-line);
-}
-.projects-grid {
-    display:grid;
-    gap:30px;
-}
-.project {
-    background:white;
-    padding:25px;
-    border-left:6px solid var(--primary-red);
-    box-shadow:0 10px 20px rgba(0,0,0,0.08);
-}
-iframe {
-    width:100%;
-    height:300px;
-    margin-top:15px;
-}
-</style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+    <style>
+        :root {
+            --bg-cream: #FDFCF5;
+            --primary-red: #9E4244;
+            --text-dark: #2c2c2c;
+            --border-line: #000;
+            --muted-text: #555;
+        }
+
+        *, *::before, *::after {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        html {
+            scroll-behavior: smooth;
+        }
+
+        body {
+            font-family: 'Lato', sans-serif;
+            background-color: var(--bg-cream);
+            color: var(--text-dark);
+            border-top: 20px solid var(--primary-red);
+            min-height: 100vh;
+        }
+
+        header {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            background-color: var(--bg-cream);
+            padding: 1.5rem 5%;
+            border-bottom: 2px solid var(--border-line);
+            z-index: 999;
+        }
+
+        nav {
+            display: flex;
+            justify-content: center;
+            gap: 4rem;
+        }
+
+        nav a {
+            text-decoration: none;
+            font-family: 'Playfair Display', serif;
+            font-size: 1.2rem;
+            color: var(--text-dark);
+            transition: color 0.3s ease;
+        }
+
+        nav a:hover {
+            color: var(--primary-red);
+        }
+
+        .section {
+            padding: 8rem 10% 6rem;
+        }
+
+        .section-content {
+            max-width: 1100px;
+            margin: auto;
+        }
+
+        h2 {
+            font-family: 'Playfair Display', serif;
+            font-size: 3rem;
+            text-align: center;
+            margin-bottom: 1rem;
+            color: var(--primary-red);
+        }
+
+        .subtitle {
+            text-align: center;
+            font-style: italic;
+            color: var(--muted-text);
+            margin-bottom: 2rem;
+        }
+
+        .divider {
+            width: 100%;
+            height: 3px;
+            background-color: var(--border-line);
+            margin: 2rem 0;
+            border-radius: 2px;
+        }
+
+        .movies-grid {
+            display: flex;
+            flex-direction: column;
+            gap: 2.5rem;
+            margin-bottom: 3rem;
+        }
+
+        .movie-card {
+            display: flex;
+            background: #fff;
+            padding: 1rem;
+            border: 2px solid var(--border-line);
+            border-radius: 18px;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            flex-wrap: wrap;
+            align-items: flex-start;
+            text-decoration: none;
+            color: inherit;
+        }
+
+        .movie-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 15px 30px rgba(0,0,0,0.1);
+        }
+
+        .movie-poster {
+            width: 250px;
+            height: 350px;
+            object-fit: cover;
+            border-radius: 6px;
+            flex-shrink: 0;
+        }
+
+        .movie-info {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            margin-left: 2rem;
+            flex: 1;
+        }
+
+        .movie-info h3 {
+            margin-bottom: 0.5rem;
+            font-family: 'Playfair Display', serif;
+            font-size: 1.6rem;
+            color: var(--primary-red);
+        }
+
+        .movie-info p {
+            margin: 0.4rem 0;
+            font-size: 1rem;
+            color: var(--muted-text);
+            line-height: 1.5;
+        }
+
+        .trailer {
+            margin-top: 1rem;
+            border-radius: 8px;
+            overflow: hidden;
+        }
+
+        .trailer iframe {
+            width: 100%;
+            height: 360px;
+        }
+
+        footer {
+            background-color: #DCDCD5;
+            padding: 2rem 0;
+            text-align: center;
+            margin-top: 4rem;
+        }
+
+        .social-links {
+            display: flex;
+            justify-content: center;
+            gap: 1.5rem;
+            margin-bottom: 1rem;
+        }
+
+        .social-links a {
+            color: var(--text-dark);
+            font-size: 1.4rem;
+            transition: color 0.3s ease;
+        }
+
+        .social-links a:hover {
+            color: var(--primary-red);
+        }
+
+        footer p {
+            font-size: 0.9rem;
+        }
+
+        @media(max-width: 900px) {
+            .movie-card {
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
+            }
+
+            .movie-info {
+                margin-left: 0;
+                margin-top: 1rem;
+            }
+
+            .movie-poster {
+                width: 220px;
+                height: 320px;
+            }
+
+            .trailer iframe {
+                height: 240px;
+            }
+
+            .section {
+                padding: 8rem 5% 4rem;
+            }
+        }
+    </style>
 </head>
 
 <body>
+    <header>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="movies.html">Movies</a>
+            <a href="tvshows.html">TV Shows</a>
+        </nav>
+    </header>
 
-<header>
-<nav>
-<a href="index.html">Home</a>
-<a href="mybeats.html">My Beats</a>
-<a href="movies.html">Movies</a>
-<a href="tvshows.html">TV Shows</a>
-</nav>
-</header>
+    <section class="section">
+        <div class="section-content">
+            <h2>My Personal Movie Favorites</h2>
+            <p class="subtitle">Some of my all-time favorite films</p>
 
-<section class="section">
-<h2>My Favorite Movies</h2>
+            <div class="movies-grid">
+                <a href="https://en.wikipedia.org/wiki/Interstellar_%28film%29" class="movie-card">
+                    <img src="images/films/interstellar.jpg" alt="Interstellar Poster" class="movie-poster">
+                    <div class="movie-info">
+                        <h3>Interstellar</h3>
+                        <p>Genre: Sci-Fi / Adventure</p>
+                        <p>Year: 2014</p>
+                        <p>An epic exploration of space and time, with love and survival at its core.</p>
+                        <div class="trailer">
+                            <iframe src="https://www.youtube.com/watch?v=zSWdZVtXT7E" title="Interstellar Trailer" frameborder="0" allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </a>
 
-<div class="projects-grid">
+                <a href="https://en.wikipedia.org/wiki/The_Karate_Kid_(2010_film)" class="movie-card">
+                    <img src="images/films/thekaratekid.jpg" alt="The Karate Kid Poster" class="movie-poster">
+                    <div class="movie-info">
+                        <h3>The Karate Kid</h3>
+                        <p>Genre: Action / Drama</p>
+                        <p>Year: 2010</p>
+                        <p>Jaden Smith learns martial arts to overcome challenges and find inner strength.</p>
+                        <div class="trailer">
+                            <iframe src="https://www.youtube.com/watch?v=XY8amUImEu0" title="The Karate Kid Trailer" frameborder="0" allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </a>
 
-<div class="project">
-<h3>Romance: The Notebook</h3>
-<p><strong>Director:</strong> Nick Cassavetes</p>
-<p><strong>Stars:</strong> Ryan Gosling, Rachel McAdams</p>
-<p>A touching love story about enduring romance and memories.</p>
-<iframe src="https://www.youtube.com/embed/BjJcYdEOI0k" allowfullscreen></iframe>
-</div>
+                <a href="https://en.wikipedia.org/wiki/Coraline_(film)" class="movie-card">
+                    <img src="images/films/coraline.jpg" alt="Coraline Poster" class="movie-poster">
+                    <div class="movie-info">
+                        <h3>Coraline</h3>
+                        <p>Genre: Fantasy / Animation</p>
+                        <p>Year: 2009</p>
+                        <p>A young girl discovers a mysterious parallel world with dark secrets.</p>
+                        <div class="trailer">
+                            <iframe src="https://www.youtube.com/watch?v=m9bOpeuvNwY" title="Coraline Trailer" frameborder="0" allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </a>
 
-<div class="project">
-<h3>Comedy: 3 Idiots</h3>
-<p><strong>Director:</strong> Rajkumar Hirani</p>
-<p><strong>Stars:</strong> Aamir Khan, R. Madhavan</p>
-<p>A heartwarming comedy-drama about friendship and chasing dreams.</p>
-<iframe src="https://www.youtube.com/embed/K0eDlFX9GMc" allowfullscreen></iframe>
-</div>
+                <a href="https://en.wikipedia.org/wiki/Now_You_See_Me_(film)" class="movie-card">
+                    <img src="images/films/nowyouseeme.jpg" alt="Now You See Me Poster" class="movie-poster">
+                    <div class="movie-info">
+                        <h3>Now You See Me</h3>
+                        <p>Genre: Mystery / Thriller</p>
+                        <p>Year: 2013</p>
+                        <p>A team of magicians pulls off daring heists while staying ahead of the law.</p>
+                        <div class="trailer">
+                            <iframe src="https://www.youtube.com/watch?v=C2NWGAqZhF4" title="Now You See Me Trailer" frameborder="0" allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </a>
 
-</div>
-</section>
+                <a href="https://en.wikipedia.org/wiki/Oppenheimer_(film)" class="movie-card">
+                    <img src="images/films/oppenheimer.jpg" alt="Oppenheimer Poster" class="movie-poster">
+                    <div class="movie-info">
+                        <h3>Oppenheimer</h3>
+                        <p>Genre: Biography / Drama</p>
+                        <p>Year: 2023</p>
+                        <p>The story of J. Robert Oppenheimer, the “father of the atomic bomb,” and the moral dilemmas he faced.</p>
+                        <div class="trailer">
+                            <iframe src="https://www.youtube.com/watch?v=uYPbbksJxIg" title="Oppenheimer Trailer" frameborder="0" allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </a>
+            </div>
 
+            <div class="divider"></div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="social-links">
+            <a href="https://web.facebook.com/cycy.1123"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="https://github.com/libutoncyrilmae-a11y"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.instagram.com/cy.cyreal/"><i class="fa-brands fa-instagram"></i></a>
+            <a href="mailto:123cyrilmae@gmail.com"><i class="fa-regular fa-envelope"></i></a>
+        </div>
+        <p>&copy; Cyril Libuton</p>
+    </footer>
 </body>
 </html>
