--- a/myfilm.html
+++ b/myfilm.html
@@ -105,17 +105,19 @@
             margin-bottom: 3rem;
         }
 
+        /* Movie Card Styling */
         .movie-card {
             display: flex;
+            gap: 2rem;
             background: #fff;
             padding: 1rem;
             border: 2px solid var(--border-line);
             border-radius: 18px;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
-            flex-wrap: wrap;
-            align-items: flex-start;
             text-decoration: none;
             color: inherit;
+            flex-wrap: wrap;
+            align-items: flex-start;
         }
 
         .movie-card:hover {
@@ -124,19 +126,18 @@
         }
 
         .movie-poster {
-            width: 250px;
-            height: 350px;
+            width: 100%;
+            max-width: 250px;
+            aspect-ratio: 5 / 7;
             object-fit: cover;
             border-radius: 6px;
             flex-shrink: 0;
         }
 
         .movie-info {
+            flex: 1;
             display: flex;
             flex-direction: column;
-            justify-content: flex-start;
-            margin-left: 2rem;
-            flex: 1;
         }
 
         .movie-info h3 {
@@ -153,15 +154,23 @@
             line-height: 1.5;
         }
 
+        /* Trailer stretches to fill remaining space under description */
         .trailer {
-            margin-top: 1rem;
+            position: relative;
+            width: 100%;
+            flex-grow: 1; /* fill remaining space */
             border-radius: 8px;
             overflow: hidden;
+            margin-top: 1rem;
         }
 
         .trailer iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
             width: 100%;
-            height: 360px;
+            height: 100%;
+            border: 0;
         }
 
         footer {
@@ -200,17 +209,17 @@
             }
 
             .movie-info {
-                margin-left: 0;
                 margin-top: 1rem;
             }
 
-            .movie-poster {
-                width: 220px;
-                height: 320px;
+            .trailer {
+                flex-grow: 0; /* on mobile just below text */
+                width: 100%;
+                padding-top: 50%;
             }
 
             .trailer iframe {
-                height: 240px;
+                position: absolute;
             }
 
             .section {
@@ -236,6 +245,7 @@
             <p class="subtitle">Some of my all-time favorite films</p>
 
             <div class="movies-grid">
+
                 <a href="https://en.wikipedia.org/wiki/Interstellar_%28film%29" class="movie-card">
                     <img src="images/films/interstellar.jpg" alt="Interstellar Poster" class="movie-poster">
                     <div class="movie-info">
@@ -244,7 +254,7 @@
                         <p>Year: 2014</p>
                         <p>An epic exploration of space and time, with love and survival at its core.</p>
                         <div class="trailer">
-                            <iframe src="https://www.youtube.com/watch?v=zSWdZVtXT7E" title="Interstellar Trailer" frameborder="0" allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/zSWdZVtXT7E" title="Interstellar Trailer" allowfullscreen></iframe>
                         </div>
                     </div>
                 </a>
@@ -257,7 +267,7 @@
                         <p>Year: 2010</p>
                         <p>Jaden Smith learns martial arts to overcome challenges and find inner strength.</p>
                         <div class="trailer">
-                            <iframe src="https://www.youtube.com/watch?v=XY8amUImEu0" title="The Karate Kid Trailer" frameborder="0" allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/XY8amUImEu0" title="The Karate Kid Trailer" allowfullscreen></iframe>
                         </div>
                     </div>
                 </a>
@@ -270,7 +280,7 @@
                         <p>Year: 2009</p>
                         <p>A young girl discovers a mysterious parallel world with dark secrets.</p>
                         <div class="trailer">
-                            <iframe src="https://www.youtube.com/watch?v=m9bOpeuvNwY" title="Coraline Trailer" frameborder="0" allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/m9bOpeuvNwY" title="Coraline Trailer" allowfullscreen></iframe>
                         </div>
                     </div>
                 </a>
@@ -283,23 +293,24 @@
                         <p>Year: 2013</p>
                         <p>A team of magicians pulls off daring heists while staying ahead of the law.</p>
                         <div class="trailer">
-                            <iframe src="https://www.youtube.com/watch?v=C2NWGAqZhF4" title="Now You See Me Trailer" frameborder="0" allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/C2NWGAqZhF4" title="Now You See Me Trailer" allowfullscreen></iframe>
                         </div>
                     </div>
                 </a>
 
                 <a href="https://en.wikipedia.org/wiki/Oppenheimer_(film)" class="movie-card">
-                    <img src="images/films/oppenheimer.jpg" alt="Oppenheimer Poster" class="movie-poster">
+                    <img src="images/films/oppeneimer.jpg" alt="Oppenheimer Poster" class="movie-poster">
                     <div class="movie-info">
                         <h3>Oppenheimer</h3>
                         <p>Genre: Biography / Drama</p>
                         <p>Year: 2023</p>
                         <p>The story of J. Robert Oppenheimer, the “father of the atomic bomb,” and the moral dilemmas he faced.</p>
                         <div class="trailer">
-                            <iframe src="https://www.youtube.com/watch?v=uYPbbksJxIg" title="Oppenheimer Trailer" frameborder="0" allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/uYPbbksJxIg" title="Oppenheimer Trailer" allowfullscreen></iframe>
                         </div>
                     </div>
                 </a>
+
             </div>
 
             <div class="divider"></div>
